--- a/vcweb/core/templates/experimenter/register-test-participants.html
+++ b/vcweb/core/templates/experimenter/register-test-participants.html
@@ -1,7 +1,7 @@
 {% extends "experimenter/register-participants.html" %}
 {% block participant_registration_header %}
 <h3>Test Participant Registration</h3>
-<div class='alert alert-block alert-error'><h4 class='alert-heading'>NOTE</h4>This should only be used for testing experiments.</div>
+<div class='alert alert-block alert-danger'><h4>NOTE</h4><i class='fa fa-warning'></i> This should only be used for testing experiments.</div>
 {% endblock %}
 
 
