adding build id to footer

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -124,6 +124,7 @@
                     <li><a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a></li>
                     <li><a href='http://shesc.asu.edu'>School of Human Evolution and Social Change</a></li>
                     <li><a href='http://www.azregents.edu/'>&copy; {% now "Y" %} Arizona Board of Regents</a></li>
+                    <li>build: {% build_id %}
                 </ul>
                 {% endblock footerlinks %}
             </div>
