adding participant list endpoint showing the participant email, experiment auth code and participant URL for issue #148

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -96,7 +96,7 @@
                         <span id='participantCountId' data-bind='text:participantCount' class='badge badge-info'></span>
                         registered participants
                     </a>
-                    <a href='download-registered-participants'><i class='fa fa-users'></i> download participant sheet</a>
+                    <a href='download-participants'><i class='fa fa-users'></i> download participant sheet</a>
                 </div>
                 <div id='registeredParticipants' class='panel-collapse collapse'>
                     <div class='panel-default panel-body' data-bind='foreach: groups'>
