adding html5 local storage option for preserving the last selected tab in the experimenter dashboard

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -87,6 +87,7 @@
 <script>
     var viewModelObject = $.parseJSON("{{ dashboardViewModelJson|escapejs }}");
     $(function() {
+        preserveLastSelectedTab();
         function DashboardViewModel(viewModelObject) {
             var self = this;
             var model = ko.mapping.fromJS(viewModelObject);
