--- a/vcweb/core/templates/contact.html
+++ b/vcweb/core/templates/contact.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load url from future %}
+{% url "report_issues" as issues_url %}
 
 {% block title %}Contact Us{% endblock %}
 
@@ -8,13 +10,31 @@
     <div class='panel panel-warning'>
         <div class='panel-heading'>VCWeb Beta</div>
         <div class='panel-body'>
-            VCWeb is currently in a closed beta. If you'd like to request an experimenter account or have any bug
-            reports or feedback for our development team please feel free to 
-            <a class='external' href='http://commons.asu.edu/contact'>email us via our contact form</a> or 
+            VCWeb is currently in a closed beta. If you'd like to request an experimenter account or have any
+            <a href='#bugs'>bug reports</a> or feedback for our development team please feel free to
+            <a class='external' href='http://commons.asu.edu/contact'>email us via our contact form</a> or
             <a class='external' href='https://bitbucket.org/virtualcommons/vcweb/issues'>create issues on our BitBucket issue tracker</a>.
             Thanks for your interest!
         </div>
     </div>
+    <div class='panel panel-info'>
+        <div class='panel-heading'><a name='bugs'>How to report bugs effectively</a></div>
+        <div class='panel-body'>
+            Encountered a bug in the application? 
+            <a href='{{ issues_url }}'>Let us know here.</a>
+            Please include relevant detail on <strong>what actions led to the bug</strong>, including
+            the <strong>URL in your browser bar</strong> {% comment %} [<a href='#footnote-1'>1</a>] {% endcomment %} and any <strong>relevant screenshots</strong>. Thanks for helping us make
+            VCWEB better!
+        </div>
+    </div>
+
+    {% comment %}
+    <div class='footnotes'>
+        <a name='footnote-1'>[1]</a> Right now BitBucket doesn't support anonymous prefilled issue creation, vote for <a
+            href='https://bitbucket.org/site/master/issue/5073'>https://bitbucket.org/site/master/issue/5073</a> if
+        you'd like better bug reports with less manual data entry.
+    </div>
+    {% endcomment %}
 </div>
 {% endblock page %}
 
