adding email detection to account password reset and urlencoding email in registration template

--- a/vcweb/core/templates/account/password_reset_form.html
+++ b/vcweb/core/templates/account/password_reset_form.html
@@ -14,3 +14,18 @@
     </div>
   </div>
 {% endblock %}
+
+{% block javascript %}
+{{block.super}}
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js'></script>
+<script>
+$(function() {
+    var url = $.url();
+    var email = $.url().param('email');
+    if (email) {
+        $('#id_email').val(email);
+    }
+});
+</script>
+
+{% endblock %}
