--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -20,7 +20,8 @@
 {% block head %}
 <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <!-- Latest compiled and minified CSS -->
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 <link rel='stylesheet' href="{% static 'bootstrap/css/font-awesome.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/style.css' %}" media="screen" />
@@ -29,21 +30,20 @@
 </head>
 <body>
 {% block header %}
-<header class='navbar navbar-default navbar-fixed-top' role='banner'>
+<nav class='navbar navbar-default navbar-fixed-top' role='navigation'>
     <div class='container'>
         {% block headernav %}
         {% block headerlinks %}
         <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class='navbar-brand {% active request home %}' href='{{ home}}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='30' height='23' alt='vcweb logo'/>virtual commons</a>
-{#            <a href="../" class="navbar-brand">Bootstrap</a>#}
+            <a class='navbar-brand {% active request home %}' href='{{ home }}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='30' height='23' alt='vcweb logo'/>virtual commons</a>
         </div>
-        <nav class="collapse navbar-collapse" role='navigation'>
+        <div class="collapse navbar-collapse" role='navigation'>
             <ul class='nav navbar-nav'>
                 {% if request.user.is_authenticated %}
                 {% if request.user.participant %}
@@ -80,9 +80,9 @@
             </ul>
             {% endblock login %}
             {% endblock headernav %}
-        </nav>
+        </div>
     </div>
-</header>
+</nav>
 {% endblock %}
 <div class='container fill'>
     <noscript>
