--- a/vcweb/core/templates/404.html
+++ b/vcweb/core/templates/404.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
+{% url 'core:report_issues' as issues_url %}
 
 {% block title %}
-    I'm going back to 404
+    Page not found
 {% endblock %}
 
 {% block page %}
-    <div id='post'>
-        <h2 class='title'>404, page not found</h2>
-        <div class='entry'>
-            Sorry, there was no page found for the given URL.  Please let us know if
-            this is due to a broken link on our end.
-        </div>
+<div class='panel panel-default'>
+    <div class='panel-heading'>
+        <h3 class='panel-title'>404 page not found</h3>
     </div>
+    <div class='panel-body'>
+        Sorry, there was no page found for the given URL.  Please <a href='{{issues_url}}'>let us know</a> if this is
+        a broken link.
+    </div>
+</div>
 {% endblock page %}
 
