adding blurb on recommended browsers

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -19,8 +19,10 @@
         </div>
         <h2>Current development</h2>
         <div>
-            You can find up-to-date development news and our <a class='external' 
-                href='https://bitbucket.org/virtualcommons/vcweb/issues?status=new&amp;status=open'>issue tracker</a> 
+            VCWEB has been extensively tested with up-to-date versions of <a href='http://www.google.com/chrome'>Google Chrome</a> 
+            and <a href='http://getfirefox.com'>Mozilla Firefox</a> but should also work with <a href='http://www.apple.com/safari'>Safari</a>.
+            You can find up-to-date development news and our <a class='external'
+            href='https://bitbucket.org/virtualcommons/vcweb/issues?status=new&amp;status=open'>issue tracker</a> 
             at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb'>our BitBucket repository</a>.
         </div>
         <h2>Acknowledgements</h2>
