minor mods to error pages, not displaying treatment id when unset in experimenter dashboard

--- a/vcweb/core/templates/403.html
+++ b/vcweb/core/templates/403.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Unauthorized Access Detected
+    Unauthorized Access 
 {% endblock %}
 
 {% block page %}
-<div class='panel panel-default'>
+<div class='panel panel-default' style='margin-top: 30px;'>
     <div class='panel-heading'>
         <h3 class='panel-title'>Unauthorized Access</h3>
     </div>
