--- a/vcweb/core/templates/404.html
+++ b/vcweb/core/templates/404.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block page %}
-<div class='panel panel-default'>
+<div class='panel panel-default' style='margin-top: 30px;'>
     <div class='panel-heading'>
         <h3 class='panel-title'>404 page not found</h3>
     </div>
