--- a/vcweb/core/templates/500.html
+++ b/vcweb/core/templates/500.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block page %}
-<div class='panel panel-default'>
+<div class='panel panel-default' style='margin-top: 30px;'>
     <div class='panel-heading'>
         <h2>Unhandled server error</h2>
     </div>
